@@ -22,6 +22,7 @@ import alfio.manager.PaymentManager.PaymentMethodDTO.PaymentMethodStatus;
 import alfio.manager.i18n.MessageSourceManager;
 import alfio.manager.payment.BankTransferManager;
 import alfio.manager.payment.PaymentSpecification;
+import alfio.manager.payment.custom.offline.CustomOfflineConfigurationManager;
 import alfio.manager.support.*;
 import alfio.manager.support.reservation.*;
 import alfio.manager.system.ConfigurationLevel;
@@ -174,6 +175,7 @@ public class TicketReservationManager {
     private final ReservationAuditingHelper auditingHelper;
     private final ReservationFinalizer reservationFinalizer;
     private final AdditionalServiceManager additionalServiceManager;
+    private final CustomOfflineConfigurationManager customOfflineConfigurationManager;
 
     public TicketReservationManager(EventRepository eventRepository,
                                     OrganizationRepository organizationRepository,
@@ -209,7 +211,8 @@ public class TicketReservationManager {
                                     ReservationCostCalculator reservationCostCalculator,
                                     ReservationEmailContentHelper reservationHelper,
                                     ReservationFinalizer reservationFinalizer,
-                                    OrderSummaryGenerator orderSummaryGenerator) {
+                                    OrderSummaryGenerator orderSummaryGenerator,
+                                    CustomOfflineConfigurationManager customOfflineConfigurationManager) {
         this.eventRepository = eventRepository;
         this.organizationRepository = organizationRepository;
         this.ticketRepository = ticketRepository;
@@ -251,6 +254,7 @@ public class TicketReservationManager {
         this.reservationHelper = reservationHelper;
         this.auditingHelper = new ReservationAuditingHelper(auditingRepository);
         this.reservationFinalizer = reservationFinalizer;
+        this.customOfflineConfigurationManager = customOfflineConfigurationManager;
     }
 
     private String createSubscriptionReservation(SubscriptionDescriptor subscriptionDescriptor,
@@ -796,7 +800,7 @@ public class TicketReservationManager {
 
     public void deleteOfflinePayment(Event event, String reservationId, boolean expired, boolean credit, boolean notify, String username) {
         TicketReservation reservation = findById(reservationId).orElseThrow(IllegalArgumentException::new);
-        Validate.isTrue(reservation.getStatus() == OFFLINE_PAYMENT || reservation.getStatus() == DEFERRED_OFFLINE_PAYMENT, "Invalid reservation status");
+        Validate.isTrue(EnumSet.of(OFFLINE_PAYMENT, DEFERRED_OFFLINE_PAYMENT, CUSTOM_OFFLINE_PAYMENT).contains(reservation.getStatus()), "Invalid reservation status");
         Validate.isTrue(!(credit && reservation.getStatus() == DEFERRED_OFFLINE_PAYMENT), "Cannot credit deferred payment");
         if(credit) {
             creditReservation(reservation, username, notify);
@@ -925,13 +929,25 @@ public class TicketReservationManager {
      *
      * @param paymentMethodDTO
      * @param purchaseContext
-     * @param configurationManager
      * @return
      */
-    public static boolean isValidPaymentMethod(PaymentManager.PaymentMethodDTO paymentMethodDTO, PurchaseContext purchaseContext, ConfigurationManager configurationManager) {
+    public boolean isValidPaymentMethod(PaymentManager.PaymentMethodDTO paymentMethodDTO, PurchaseContext purchaseContext) {
+        boolean ifCustomOfflineIsApplicableForEvent = true;
+        if (paymentMethodDTO.getPaymentProxy() == PaymentProxy.CUSTOM_OFFLINE && purchaseContext.event().isPresent()) {
+            var event = purchaseContext.event().get();
+            ifCustomOfflineIsApplicableForEvent = customOfflineConfigurationManager
+                .getAllowedCustomOfflinePaymentMethodsForEvent(event)
+                .stream()
+                .anyMatch(pm -> pm.getPaymentMethodId().equals(paymentMethodDTO.getPaymentMethodId()));
+        }
+
         return paymentMethodDTO.isActive()
             && purchaseContext.getAllowedPaymentProxies().contains(paymentMethodDTO.getPaymentProxy())
-            && (!paymentMethodDTO.getPaymentProxy().equals(PaymentProxy.OFFLINE) || hasValidOfflinePaymentWaitingPeriod(new PaymentContext(purchaseContext), configurationManager));
+            && (
+                !paymentMethodDTO.getPaymentProxy().equals(PaymentProxy.OFFLINE)
+                || hasValidOfflinePaymentWaitingPeriod(new PaymentContext(purchaseContext), configurationManager)
+            )
+            && ifCustomOfflineIsApplicableForEvent;
     }
 
     private void reTransitionToPending(String reservationId, boolean deleteTransactions) {
@@ -1850,7 +1866,8 @@ public class TicketReservationManager {
                 var totalPrice = totalReservationCostWithVAT(reservation).getLeft();
                 var paymentToken = paymentWebhookResult.getPaymentToken();
                 var paymentSpecification = new PaymentSpecification(reservation, totalPrice, purchaseContext, paymentToken,
-                    orderSummaryForReservation(reservation, purchaseContext), true, hasPrivacyPolicy(purchaseContext));
+                    paymentProvider.getPaymentMethodForTransaction(transaction), orderSummaryForReservation(reservation, purchaseContext),
+                    true, hasPrivacyPolicy(purchaseContext));
                 transitionToComplete(paymentSpecification, paymentToken.getPaymentProvider(), null);
                 break;
             }
@@ -1946,7 +1963,7 @@ public class TicketReservationManager {
         "reservation", reservation,
             RESERVATION_ID, shortReservationID,
         "eventName", purchaseContext.getDisplayName(),
-        "provider", requireNonNullElse(paymentMethod, PaymentMethod.NONE).name(),
+        "provider", requireNonNullElse(paymentMethod, StaticPaymentMethods.NONE).name(),
         "reason", paymentWebhookResult.getReason(),
         "reservationUrl", reservationUrl(reservation, purchaseContext));
 
@@ -1976,7 +1993,7 @@ public class TicketReservationManager {
         var messageSource = messageSourceManager.getMessageSourceFor(purchaseContext);
         var provider = (ServerInitiatedTransaction) optionalProvider.get();
         var paymentSpecification = new PaymentSpecification(reservation,
-            totalReservationCostWithVAT(reservation).getLeft(), purchaseContext, null,
+            totalReservationCostWithVAT(reservation).getLeft(), purchaseContext, null, paymentMethod,
             orderSummaryForReservation(reservation, purchaseContext), false, false);
         if(!acquireGroupMembers(reservationId, purchaseContext)) {
             groupManager.deleteWhitelistedTicketsForReservation(reservationId);
@@ -2049,8 +2066,11 @@ public class TicketReservationManager {
         var categoriesInReservation = ticketRepository.getCategoriesIdToPayInReservation(reservationId);
         var blacklistedPaymentMethods = configurationManager.getBlacklistedMethodsForReservation(purchaseContext, categoriesInReservation);
         var transactionRequest = new TransactionRequest(totalPrice, ticketReservationRepository.getBillingDetailsForReservation(reservationId));
-        var availableMethods = paymentManager.getPaymentMethods(purchaseContext, transactionRequest).stream().filter(pm -> pm.getStatus() == PaymentMethodStatus.ACTIVE && pm.getPaymentMethod() != PaymentMethod.NONE).collect(toList());
-        if(availableMethods.isEmpty()  || availableMethods.stream().allMatch(pm -> blacklistedPaymentMethods.contains(pm.getPaymentMethod()))) {
+        var availableMethods = paymentManager.getPaymentMethods(purchaseContext, transactionRequest).stream().filter(pm -> pm.getStatus() == PaymentMethodStatus.ACTIVE && pm.getPaymentMethod() != StaticPaymentMethods.NONE).toList();
+        var areAllMethodsBlacklisted = availableMethods.stream().allMatch(pm ->
+            blacklistedPaymentMethods.stream().anyMatch(blItem -> blItem.getPaymentMethodId().equals(pm.getPaymentMethodId()))
+        );
+        if(availableMethods.isEmpty()  || areAllMethodsBlacklisted) {
             log.error("Cannot proceed with reservation. No payment methods available {} or all blacklisted {}", availableMethods, blacklistedPaymentMethods);
             return false;
         }
